# emotion-and-sentiment-recognition

./: .gitignore  README.md  config.yml  main.ipynb  pyproject.toml
data/: val.csv
data/clean/: ml_test_sentences.csv  ml_test_texts.csv  ml_train_sentences.csv  ml_val_sentences.csv  ml_val_texts.csv  nn_test_sentences.csv  nn_val_sentences.csv  test_sentences.csv  tf_test.csv  tf_val.csv  val_sentences.csv
data/raw_data/: test.csv  train.csv
logs/: events.out.tfevents.1748628688.DESKTOP-NJK7GPG.16168.0  events.out.tfevents.1748629467.DESKTOP-NJK7GPG.15992.0
logs/allegro_herbert-large-cased/: events.out.tfevents.1748282792.Michals-MacBook-Air.local.11519.0  events.out.tfevents.1748287258.DESKTOP-NJK7GPG.26572.0
logs/sdadas_mmlw-e5-small/: events.out.tfevents.1748292248.DESKTOP-NJK7GPG.16096.0  events.out.tfevents.1748297225.DESKTOP-NJK7GPG.28288.0
logs/sdadas_polish-roberta-large-v2/: events.out.tfevents.1748291777.DESKTOP-NJK7GPG.20244.0
models/transformers_final/: config.json  tokenizer.json  tokenizer_config.json
src/: data_processor.py  machine_learning.ipynb  main.py  model_trainer.py  neural_network.ipynb  nn_model.ipynb  tools.py  transformers.ipynb
src/logs/: events.out.tfevents.1748450801.Michals-MacBook-Air.local.14707.0  events.out.tfevents.1748674859.DESKTOP-NJK7GPG.2360.0  events.out.tfevents.1748730187.DESKTOP-NJK7GPG.2360.1
src/tmp/: attention_neural_network.ipynb  machine_learning.ipynb  test_nn.ipynb  transformers.ipynb
