[project]
name = "emotion-and-sentiment-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.31.4",
    "jupyter>=1.1.1",
    "memory-profiler>=0.61.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.0",
    "spacy>=3.8.6",
    "tensorflow-io-gcs-filesystem==0.31",
    "tf-keras>=2.19.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.2",
]
