[project]
name = "emotion-and-sentiment-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "huggingface-hub>=0.31.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "tensorflow>=2.16.2",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
    "tf-keras>=2.16.0",
    "torch>=2.7.0",
    "transformers>=4.52.2",
]
