[project]
name = "emotion-and-sentiment-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface>=0.0.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "plwordnet>=0.1.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "transformers>=4.52.3",
]
